@@ -1,3 +1,7 @@
+17-07-08 robert gonda  <gonda.robert@google.com>
+
+	* Add FE groups access to table tx_rtgfiles_files
+
 30-04-08 robert gonda  <gonda.robert@google.com>
 
 	* Add any MIME types
